# phantom-strike

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  ENHANCED_README.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  render.yaml  test_real_attack.py  test_web_module.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: generate_diagrams.py
configs/: aggressive.yaml  default.yaml  stealth.yaml
deploy/: Dockerfile
phantom/: __init__.py  __main__.py
phantom/agents/: __init__.py  ad_agent.py  analyst_agent.py  base_agent.py  c2_agent.py  cloud_agent.py  cred_agent.py  exploit_agent.py  orchestrator.py  post_exploit_agent.py  recon_agent.py  report_agent.py  reverser_agent.py  scanner_agent.py  stealth_agent.py  web_exploit_agent.py
phantom/ai/: __init__.py  attack_planner.py  engine.py  enhanced_engine.py  remote.py  summarizer.py
phantom/api/: enhanced_server.py  server.py
phantom/cli/: app.py
phantom/core/: attack_modes.py  browser.py  config.py  dynamic_threading.py  engine.py  enhanced_engine.py  events.py  loader.py  opplan.py  roe.py  task_queue.py
phantom/db/: __init__.py  knowledge_graph.py  store.py
phantom/modules/: __init__.py  base.py
phantom/modules/ad/: __init__.py  engine.py
phantom/modules/c2/: __init__.py  engine.py  sliver_engine.py
phantom/modules/cloud/: __init__.py  engine.py  enhanced_engine.py
phantom/modules/cred/: __init__.py  engine.py
phantom/modules/exploit/: __init__.py  engine.py  exploitdb.py
phantom/modules/identity/: __init__.py  engine.py
phantom/modules/network/: __init__.py  engine.py
phantom/modules/osint/: __init__.py  engine.py
phantom/modules/post/: __init__.py  engine.py
phantom/modules/report/: __init__.py  engine.py
phantom/modules/reverser/: __init__.py  engine.py
phantom/modules/stealth/: __init__.py  engine.py
phantom/modules/web/: __init__.py  engine.py  enhanced_engine.py
phantom/sandbox/: __init__.py  docker_sandbox.py
phantom/skills/: __init__.py
phantom/skills/ad/: asreproast.yaml  kerberoast.yaml
phantom/skills/c2/: dns-c2.yaml  sliver-implant.yaml
phantom/skills/cloud/: iam-privesc.yaml  s3-bucket-enum.yaml
phantom/skills/cred/: hash-cracking.yaml  password-spray.yaml
phantom/skills/exploit/: sqli-union.yaml  ssrf-cloud-metadata.yaml
phantom/skills/post/: cron-persistence.yaml  lsass-dump.yaml
phantom/skills/recon/: subdomain-enum.yaml  whois-osint.yaml
phantom/skills/stealth/: log-clearing.yaml  process-injection.yaml
phantom/web/: dashboard.py
tests/: test_core.py  test_v3_ad.py  test_v3_agents.py  test_v3_exploitdb.py  test_v3_integration.py  test_v3_knowledge_graph.py  test_v3_opplan.py  test_v3_roe.py  test_v3_sandbox.py  test_v3_skills.py  test_v3_sliver.py  test_v3_summarizer.py
